--- a/fast/Makefile
+++ b/fast/Makefile
@@ -1,5 +1,5 @@
 XILINX_OPENCL := $(XILINX_SDACCEL)
-DSA := xilinx:adm-pcie-7v3:1ddr:1.0
+DSA := xilinx:adm-pcie-7v3:1ddr:1.1
 XOCC := $(XILINX_SDACCEL)/bin/xocc
 CPP := g++
 
@@ -8,13 +8,14 @@ OPENCL_LIB := $(XILINX_OPENCL)/runtime/lib/x86_64
 
 CXXFLAGS := -Wall -Werror -Wno-error=uninitialized -pthread
 CLFLAGS := -g --xdevice $(DSA)
-XOCCFLAGS := -t sw_emu
+XOCCFLAGS := -t hw
 
 .PHONY: all
-all: exe fast_xclbin fast_pipeline_xclbin
+#all: exe fast_xclbin fast_pipeline_xclbin
+all: exe fast_pipeline_xclbin
 
 .PHONY:
-fast_xclbin: fast.xclbin
+#fast_xclbin: fast.xclbin
 fast_pipeline_xclbin: fast_pipeline.xclbin
 
 .PHONY: exe
@@ -23,8 +24,8 @@ exe: fast
 fast: main.cpp oclErrorCodes.cpp oclHelper.cpp oclHelper.h pgm.cpp pgm.h
 	$(CXX) $(CXXFLAGS) -I$(OPENCL_INC) -L$(OPENCL_LIB) -lOpenCL -o $@ main.cpp oclErrorCodes.cpp oclHelper.cpp pgm.cpp
 
-fast.xclbin: fast.cl
-	$(XOCC) $(XOCCFLAGS) $(CLFLAGS) $< -o $@
+#fast.xclbin: fast.cl
+#	$(XOCC) $(XOCCFLAGS) $(CLFLAGS) $< -o $@
 
 fast_pipeline.xclbin: fast_pipeline.cl
 	$(XOCC) $(XOCCFLAGS) $(CLFLAGS) $< -o $@
